--- a/css/estilos_scss.css
+++ b/css/estilos_scss.css
@@ -11,7 +11,6 @@ nav ul {
     color: white;
     text-decoration: none;
     font-family: "Bebas Neue";
-    text-decoration: none;
     text-transform: uppercase; }
 
 .background__contacto {
@@ -27,3 +26,24 @@ nav ul {
 
 .section__contacto {
   color: white; }
+
+footer {
+  background-color: black;
+  font-family: "Bebas Neue"; }
+  footer div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    footer div a {
+      display: block;
+      text-decoration: none;
+      color: white; }
+    footer div p {
+      color: white; }
+
+.footerSocialIcons {
+  flex-direction: row;
+  align-items: flex-start; }
+  .footerSocialIcons img {
+    width: 50px;
+    height: 50px; }
