--- a/css/estilos_scss.css
+++ b/css/estilos_scss.css
@@ -42,8 +42,10 @@ footer {
       color: white; }
 
 .footerSocialIcons {
+  display: flex;
   flex-direction: row;
-  align-items: flex-start; }
+  justify-content: flex-start; }
   .footerSocialIcons img {
+    padding: 2px;
     width: 50px;
     height: 50px; }
