--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -16,9 +16,11 @@ footer{
         }
 }
 .footerSocialIcons{
+    display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    img{
+    justify-content: flex-start;
+    img{        
+        padding: 2px;
         width: 50px;
         height: 50px;
     }
